--- a/notebooks/fix_geojson.ipynb
+++ b/notebooks/fix_geojson.ipynb
@@ -11,12 +11,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "merged_polygon_with_farm_pin.geojsonのうち、耕作者情報(FarmerIndicationNumberHash)が存在するものだけ抽出して新しくgeojsonファイルを生成する。"
+    "merged_polygon_with_farm_pin.geojsonのうち、耕作者情報(FarmerIndicationNumberHash)が存在するものだけ抽出して新しくgeojsonファイルを生成する。(軽量化のため)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -249,7 +249,7 @@
        "[5 rows x 47 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -286,22 +286,80 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Filtered GeoJSON file saved to: ../src/models/area_optimization/data/processed/merged_geojson/filted_merged_polygon_with_farm_pin.geojson\n"
+      "Filtered GeoJSON file saved to: ../src/models/area_optimization/data/processed/merged_geojson/filtered_merged_polygon_with_farm_pin.geojson\n"
      ]
     }
    ],
    "source": [
     "# Save the filtered GeoDataFrame to a new GeoJSON file\n",
-    "output_file_path = '../src/models/area_optimization/data/processed/merged_geojson/filted_merged_polygon_with_farm_pin.geojson'\n",
+    "output_file_path = '../src/models/area_optimization/data/processed/merged_geojson/filtered_merged_polygon_with_farm_pin.geojson'\n",
     "filtered_gdf.to_file(output_file_path, driver='GeoJSON')\n",
     "print('Filtered GeoJSON file saved to:', output_file_path)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "POLYGON ((140.375593576 36.377632174, 140.37579015100002 36.377416549, 140.37515833400002 36.377016351, 140.37500107 36.377251159, 140.375593576 36.377632174))\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(filtered_gdf.iloc[0]['geometry'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "球面積分による面積: 9375.77861827612\n",
+      "投影法による面積: 9369.98417634582\n"
+     ]
+    }
+   ],
+   "source": [
+    "import geopandas as gpd\n",
+    "from shapely.geometry import Polygon\n",
+    "\n",
+    "# サンプルのGeoDataFrameを作成\n",
+    "data = {'geometry': [Polygon([(-73.981, 40.768), (-73.981, 40.769), (-73.982, 40.769), (-73.982, 40.768)])]}\n",
+    "gdf = gpd.GeoDataFrame(data, crs=\"EPSG:4326\")  # EPSG:4326は緯度経度の座標系\n",
+    "\n",
+    "# 投影法を変える前の面積を計算（球面積分を使用）\n",
+    "from pyproj import Geod\n",
+    "geod = Geod(ellps=\"WGS84\")\n",
+    "def calculate_area(geom):\n",
+    "    lon, lat = geom.exterior.coords.xy\n",
+    "    return abs(geod.polygon_area_perimeter(lon, lat)[0])\n",
+    "gdf['area_spherical'] = gdf['geometry'].apply(calculate_area)\n",
+    "\n",
+    "# 適切な投影法に変換（例: UTMゾーン18N）\n",
+    "gdf_projected = gdf.to_crs(epsg=32618)\n",
+    "\n",
+    "# 投影法を変えた後の面積を計算\n",
+    "gdf_projected['area_projected'] = gdf_projected['geometry'].area\n",
+    "\n",
+    "# 面積の比較\n",
+    "print(\"球面積分による面積:\", gdf['area_spherical'].iloc[0])\n",
+    "print(\"投影法による面積:\", gdf_projected['area_projected'].iloc[0])"
    ]
   }
  ],
