crete first reorganize algorithm

--- a/notebooks/cropsimulation.ipynb
+++ b/notebooks/cropsimulation.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -37,21 +37,21 @@
       "runTest (pcse.tests.test_agromanager.TestAgroManager6) ... ok\n",
       "runTest (pcse.tests.test_agromanager.TestAgroManager7) ... ok\n",
       "runTest (pcse.tests.test_agromanager.TestAgroManager8) ... ok\n",
-      "runTest (pcse.tests.test_wofost72.TestWaterlimitedGrainMaize) ... ok\n",
-      "runTest (pcse.tests.test_wofost72.TestPotentialWinterWheat) ... ok\n",
+      "runTest (pcse.tests.test_wofost72.TestPotentialSunflower) ... ok\n",
+      "runTest (pcse.tests.test_wofost72.TestPotentialPotato) ... ok\n",
+      "runTest (pcse.tests.test_wofost72.TestPotentialWinterRapeseed) ... ok\n",
+      "runTest (pcse.tests.test_wofost72.TestWaterlimitedSpringBarley) ... ok\n",
       "runTest (pcse.tests.test_wofost72.TestWaterlimitedWinterWheat) ... ok\n",
       "runTest (pcse.tests.test_wofost72.TestWaterlimitedPotato) ... ok\n",
       "runTest (pcse.tests.test_wofost72.TestWaterlimitedSunflower) ... ok\n",
-      "runTest (pcse.tests.test_wofost72.TestPotentialSunflower) ... ok\n",
+      "runTest (pcse.tests.test_wofost72.TestWaterlimitedWinterRapeseed) ... ok\n",
+      "runTest (pcse.tests.test_wofost72.TestWaterlimitedGrainMaize) ... ok\n",
+      "runTest (pcse.tests.test_wofost72.TestPotentialWinterWheat) ... ok\n",
       "runTest (pcse.tests.test_wofost72.TestPotentialGrainMaize) ... ok\n",
       "runTest (pcse.tests.test_wofost72.TestPotentialSpringBarley) ... ok\n",
-      "runTest (pcse.tests.test_wofost72.TestPotentialWinterRapeseed) ... ok\n",
-      "runTest (pcse.tests.test_wofost72.TestPotentialPotato) ... ok\n",
-      "runTest (pcse.tests.test_wofost72.TestWaterlimitedWinterRapeseed) ... ok\n",
-      "runTest (pcse.tests.test_wofost72.TestWaterlimitedSpringBarley) ... ok\n",
       "\n",
       "----------------------------------------------------------------------\n",
-      "Ran 30 tests in 5.307s\n",
+      "Ran 30 tests in 5.730s\n",
       "\n",
       "OK\n"
      ]
@@ -63,40 +63,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "{'barley': dict_keys(['Spring_barley_301']),\n",
-       " 'cassava': dict_keys(['Cassava_VanHeemst_1988']),\n",
-       " 'chickpea': dict_keys(['Chickpea_VanHeemst_1988']),\n",
-       " 'cotton': dict_keys(['Cotton_VanHeemst_1988']),\n",
-       " 'cowpea': dict_keys(['Cowpea_VanHeemst_1988']),\n",
-       " 'fababean': dict_keys(['Faba_bean_801']),\n",
-       " 'groundnut': dict_keys(['Groundnut_VanHeemst_1988']),\n",
-       " 'maize': dict_keys(['Maize_VanHeemst_1988', 'Grain_maize_201', 'Grain_maize_202', 'Grain_maize_203', 'Grain_maize_204', 'Grain_maize_205', 'Fodder_maize_nl']),\n",
-       " 'millet': dict_keys(['Millet_VanHeemst_1988']),\n",
-       " 'mungbean': dict_keys(['Mungbean_VanHeemst_1988']),\n",
-       " 'pigeonpea': dict_keys(['Pigeonpea_VanHeemst_1988']),\n",
-       " 'potato': dict_keys(['Potato_701', 'Potato_702', 'Potato_703', 'Potato_704', 'Innovator', 'Fontane', 'Markies', 'Premiere', 'Festien']),\n",
-       " 'rapeseed': dict_keys(['Oilseed_rape_1001', 'Oilseed_rape_1002', 'Oilseed_rape_1003', 'Oilseed_rape_1004']),\n",
-       " 'rice': dict_keys(['Rice_501', 'Rice_HYV_IR8', 'Rice_IR64616H_DS', 'Rice_IR64616H_WS', 'Rice_IR64', 'Rice_IR72', 'Rice_IR72_DS', 'Rice_IR72_WS', 'Rice_IR8A']),\n",
-       " 'sorghum': dict_keys(['Sorghum_VanHeemst_1988']),\n",
-       " 'soybean': dict_keys(['Soybean_901', 'Soybean_902', 'Soybean_903', 'Soybean_904', 'Soybean_905', 'Soybean_906', 'Soybean_VanHeemst_1988']),\n",
-       " 'sugarbeet': dict_keys(['Sugarbeet_601', 'Sugarbeet_602', 'Sugarbeet_603', 'Sugarbeet_604']),\n",
-       " 'sugarcane': dict_keys(['Sugarcane_VanHeemst_1988']),\n",
-       " 'sunflower': dict_keys(['Sunflower_1101']),\n",
-       " 'sweetpotato': dict_keys(['Sweetpotato_VanHeemst_1988']),\n",
-       " 'tobacco': dict_keys(['Tobacco_VanHeemst_1988']),\n",
-       " 'wheat': dict_keys(['Winter_wheat_101', 'Winter_wheat_102', 'Winter_wheat_103', 'Winter_wheat_104', 'Winter_wheat_105', 'Winter_wheat_106', 'Winter_wheat_107', 'bermude', 'apache']),\n",
-       " 'seed_onion': dict_keys(['onion_agriadapt'])}"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
+     "ename": "NameError",
+     "evalue": "name 'YAMLCropDataProvider' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[3], line 1\u001b[0m\n\u001b[0;32m----> 1\u001b[0m copd \u001b[38;5;241m=\u001b[39m \u001b[43mYAMLCropDataProvider\u001b[49m()\n\u001b[1;32m      2\u001b[0m copd\u001b[38;5;241m.\u001b[39mget_crops_varieties()\n",
+      "\u001b[0;31mNameError\u001b[0m: name 'YAMLCropDataProvider' is not defined"
+     ]
     }
    ],
    "source": [
@@ -113,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -145,7 +124,7 @@
     "cropd.set_active_crop('rice', 'Rice_501')\n",
     "\n",
     "# 土壌データの設定\n",
-    "soild = CABOFileReader(\"../data/ec3.soil\")  # Assuming soil data is in a CABO file\n",
+    "soild = CABOFileReader(\"data/ec3.soil\")  # Assuming soil data is in a CABO file\n",
     "\n",
     "\n",
     "\n",
@@ -159,7 +138,7 @@
     "# # 農業管理データの読み込み\n",
     "# agromanagement = YAMLAgroManagementReader(\"path_to_agromanagement.yaml\")\n",
     "from pcse.fileinput import YAMLAgroManagementReader\n",
-    "agromanagement = YAMLAgroManagementReader(\"../data/rice.agro\")\n",
+    "agromanagement = YAMLAgroManagementReader(\"data/rice.agro\")\n",
     "\n",
     "from pcse.input import NASAPowerWeatherDataProvider\n",
     "wdp = NASAPowerWeatherDataProvider(latitude=36.377478531000001, longitude=140.38195505900001)\n",
@@ -184,7 +163,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -193,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -327,7 +306,7 @@
        "151  3539.471388  1100.25438  0.000000  80.0  0.3  None  "
       ]
      },
-     "execution_count": 18,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
