--- a/notebooks/filter_by_settlement.ipynb
+++ b/notebooks/filter_by_settlement.ipynb
@@ -272,11 +272,11 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
-    "Settlement_name = '筑地'"
+    "Settlement_name = '内原'"
    ]
   },
   {
