add reorganize function

--- a/notebooks/filter/filter_and_display.ipynb
+++ b/notebooks/filter/filter_and_display.ipynb
@@ -4,7 +4,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Filter by Settlement (特定の農業集落のデータだけにする)"
+    "# Filter and Display\n",
+    "GeoJSONをフィルタリングしてmatplotlibで表示"
    ]
   },
   {
