--- a/notebooks/optimizer/reorganize_and_output_eachpolygon.ipynb
+++ b/notebooks/optimizer/reorganize_and_output_eachpolygon.ipynb
@@ -1,8 +1,16 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Reorganize_and_output_eachpolygon\n",
+    "GeoJSONを最適に区画化してポリゴンごとにクラスタ番号を割り振る"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -18,7 +26,7 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "/var/folders/3x/t05685j130vgh1jgcmlkr9tc0000gn/T/ipykernel_67006/1856835509.py:107: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
+      "/var/folders/3x/t05685j130vgh1jgcmlkr9tc0000gn/T/ipykernel_87929/591210891.py:107: MatplotlibDeprecationWarning: The get_cmap function was deprecated in Matplotlib 3.7 and will be removed in 3.11. Use ``matplotlib.colormaps[name]`` or ``matplotlib.colormaps.get_cmap()`` or ``pyplot.get_cmap()`` instead.\n",
       "  colors = plt.cm.get_cmap(\"tab10\", num_clusters).colors  # カラーマップを使用\n"
      ]
     },
@@ -36,7 +44,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "保存しました: ./data/clustered_farmland_witheachpolygon.geojson\n"
+      "保存しました: ../data/part/\n"
      ]
     }
    ],
@@ -138,7 +146,7 @@
     "    return farmland, grouped\n",
     "\n",
     "# ファイルパス（アップロードされたファイルを使用）\n",
-    "file_path = \"./data/geojson_filtered_by_settlement/筑地.geojson\"\n",
+    "file_path = \"../data/geojson_filtered_by_settlement/筑地.geojson\"\n",
     "farmland = load_geojson(file_path)\n",
     "\n",
     "# グループ数を指定\n",
@@ -160,8 +168,10 @@
     "plt.show()\n",
     "\n",
     "# 結果を GeoJSON として保存\n",
-    "output_path = \"./data/clustered_farmland_witheachpolygon.geojson\"\n",
-    "clustered_farmland_poly.to_file(output_path, driver=\"GeoJSON\")\n",
+    "output_path = \"../data/part/\"\n",
+    "clustered_farmland_poly.to_file(output_path+\"clustered_farmland_witheachpolygon.geojson\", driver=\"GeoJSON\")\n",
+    "clustered_farmland_multipoly.to_file(output_path+\"clustered_farmland.geojson\", driver=\"GeoJSON\")\n",
+    "\n",
     "print(f\"保存しました: {output_path}\")\n"
    ]
   },
