--- a/notebooks/optimizer/reorganize_farmland.ipynb
+++ b/notebooks/optimizer/reorganize_farmland.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -239,7 +239,7 @@
        "[5 rows x 51 columns]"
       ]
      },
-     "execution_count": 76,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -251,7 +251,7 @@
     "from shapely.ops import unary_union\n",
     "\n",
     "# Load the GeoJSON file\n",
-    "file_path = '../notebooks/data/geojson_filtered_by_settlement/筑地.geojson'\n",
+    "file_path = '../../notebooks/data/geojson_filtered_by_settlement/筑地.geojson'\n",
     "gdf = gpd.read_file(file_path)\n",
     "\n",
     "gdf.head()"
@@ -259,7 +259,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -273,7 +273,7 @@
        "Name: point_lat, dtype: float64"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,188 +382,97 @@
     "            buffer = farm.buffer(1/440)\n",
     "            # バッファと交差する農地を取得\n",
     "            intersecting_farms = self.farms[self.farms.geometry.intersects(buffer)]\n",
-    "            print(len(intersecting_farms))\n",
+    "            # print(len(intersecting_farms))\n",
     "            total_area = intersecting_farms.to_crs(epsg=32654).geometry.area.sum()\n",
-    "            print('Farmer ID:', self.ID, 'Total Area:', total_area)\n",
+    "            # print('Farmer ID:', self.ID, 'Total Area:', total_area)\n",
     "\n",
     "            if total_area > max_area:\n",
     "                max_area = total_area\n",
     "                central_farm = farm\n",
     "\n",
-    "            print(max_area)\n",
+    "            # print(max_area)\n",
     "\n",
     "        return central_farm.centroid.coords[0]\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 125,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['a504f94f9a34e120b11c26dcc561cc93'\n",
-      " '0f1cd9d3f5b6f65893e4f31c96c52045, d0dbbea72d1f340a64f82d1060dc9a42'\n",
-      " '745fb7229d1395c231177495b777fd2e' '2e20b8f76a7381f7e923f5f174579807'\n",
-      " 'a96dd9b2cfd69e2d52d31a0fee58d768' '430272ee3404f2f0f84462d72c5c84e9'\n",
-      " 'b678fcead885c5626ba43f2fe51398c5'\n",
-      " '7db8af145bda49552f855ba395906a2f, 9171a59c2fab87fa3f28f839fb1db372, 8804b26aea1e028b08b9554aa81b504e, 430272ee3404f2f0f84462d72c5c84e9, 9d966c0b386ce1d8da0275c4f37e60b2, 1eec5a4995f5c1dd711f067b0cb0c4cd'\n",
-      " '44b4a2f1d7f1089df78744f394945b34' '9eda0c58317630de6e3fbcd5a2ee3918'\n",
-      " 'd11c6aa5179c36432057bb2c395f7ac5' '4dcb84569dd9bf3a0911e8eb585078b2'\n",
-      " '384ebc2b1149d39c31e8f6d020088847' '3d3db50f0f8bdc020dd68dd0dc6a61c0'\n",
-      " 'fda7674bced0a1d73ccd925ef01b5401'\n",
-      " '5b195ed949578e29f05e761a3bfe86b9, a3d2f8858e3ea5cdca9414d3d7fb0864'\n",
-      " '09abb0d6c5bdd2647c39648ee62b1418' '8804b26aea1e028b08b9554aa81b504e'\n",
-      " '9b5518b423a09c210633bf87302b2688' '7d2394ffefeb91b209020cb735a24ce3'\n",
-      " '2dacba93d45b0f46a25b29b985bd90e2'\n",
-      " '2dacba93d45b0f46a25b29b985bd90e2, c92901ee83109059686dbfeb0a08b1b3'\n",
-      " '3616a53be58d2de2f0fd6f30799725ab'\n",
-      " 'e143e1b5264685216a54e33cee6bd765, 676919919c11854b8de4002efc0be037'\n",
-      " '7c908620b9f2fdf76c43123bb90554b3' '7db8af145bda49552f855ba395906a2f'\n",
-      " 'a3d2f8858e3ea5cdca9414d3d7fb0864' 'd4a559764b814b701684d40f50ca062c'\n",
-      " '295c9657bd9debf5ca7384f367b9bcb3'\n",
-      " '8804b26aea1e028b08b9554aa81b504e, 7d2394ffefeb91b209020cb735a24ce3'\n",
-      " '48a752bb590dd689ae27cf44a90c9918' '9171a59c2fab87fa3f28f839fb1db372'\n",
-      " '87056c40bf41211a3704748cd292b3f9, d11c6aa5179c36432057bb2c395f7ac5'\n",
-      " '10aad9b486abee43973bb555cc3362c2' '7fe413fe8942c6c7346aba9551a631c6'\n",
-      " '6146dc90aef3a5c236c93ced01266666' 'e3efefe92dbd0c261ae539297309cb91'\n",
-      " '5c75ccf15a5febd6551b8ebaee97ac8f' '2d7b6fb9d7295cccf81fdd619786acb3'\n",
-      " '337b731a6accaee017520ace197a1f3f' '22104b9a53e0fb9f7471cd77c6500efd'\n",
-      " '341ff5932ebd330764aedb02481246ae' 'c1524bedc841b4e5895ae877a20a8d60'\n",
-      " '72ae73cf6aa77dd934a9794dc0ce64d0'\n",
-      " '0f1cd9d3f5b6f65893e4f31c96c52045, 295c9657bd9debf5ca7384f367b9bcb3'\n",
-      " '21d0a038f0b6fbda63c1d7ae573def39' '953fcde2684b4e658d700022dd163be6'\n",
-      " 'dc6521e4f8f1fc81e1fb31ac4997174f' '2ab69d7a42f95202c984161db9199d71'\n",
-      " '60398342ee00b3227b6e06e4bcc18053, bd14971b8741c91e8edeeb3390b4cc6c'\n",
-      " '3d3445c18a0b360638bbadb5ebcf407d'\n",
-      " '48a752bb590dd689ae27cf44a90c9918, 47165df7307c7636bbaf4880e7cb2a6f'\n",
-      " '47165df7307c7636bbaf4880e7cb2a6f' 'fb65e4d1efc593fc06a419399a6cab2d'\n",
-      " 'e0d984e190b32e713bf529c3cfd80cd7' '647195723eb2fd1c55e7e1752dc42a55'\n",
-      " 'c92901ee83109059686dbfeb0a08b1b3' 'd0f55500fceace07aec6fdbc2fd1caa2'\n",
-      " '4f4fac98ada9f4c6a9270e5a34655de8' 'bd14971b8741c91e8edeeb3390b4cc6c'\n",
-      " 'c65cb7730ebc63a3e9c300b3fe5b2f4f' 'a1955f8121b68b342b0cf7939bdaa048'\n",
-      " '9d966c0b386ce1d8da0275c4f37e60b2, 44b4a2f1d7f1089df78744f394945b34, 2e51758e36d0f6a903a12d3e9ee1861c, 2ab69d7a42f95202c984161db9199d71'\n",
-      " 'b302aa8ab2f6804d9f0bb725618f067f'\n",
-      " '60398342ee00b3227b6e06e4bcc18053, 2ab69d7a42f95202c984161db9199d71'\n",
-      " 'aabcca5d22722b52e4492639d226b9dc' '60398342ee00b3227b6e06e4bcc18053'\n",
-      " '295c9657bd9debf5ca7384f367b9bcb3, 47165df7307c7636bbaf4880e7cb2a6f, a96dd9b2cfd69e2d52d31a0fee58d768, 97df6ef59667001dfea7b93c074114c5'\n",
-      " '647195723eb2fd1c55e7e1752dc42a55, d4a559764b814b701684d40f50ca062c'\n",
-      " 'accb3280ed01c6ccbaa7fc16dae85ed8, 97df6ef59667001dfea7b93c074114c5'\n",
-      " 'ff81b9991695df392f0ca04d119c152c' 'c958fc168f31ba58bab419b5fa92b429'\n",
-      " 'daa3e1de3ffaa1decc9f87b5a7e3185f' 'accb3280ed01c6ccbaa7fc16dae85ed8'\n",
-      " '430272ee3404f2f0f84462d72c5c84e9, 7c879c8547882d49ba5c097d68e91854'\n",
-      " '7c879c8547882d49ba5c097d68e91854'\n",
-      " '3616a53be58d2de2f0fd6f30799725ab, b302aa8ab2f6804d9f0bb725618f067f'\n",
-      " '4646c2f8d96f822aca8ed6322d4f4876, 7db8af145bda49552f855ba395906a2f'\n",
-      " '7d2394ffefeb91b209020cb735a24ce3, 3616a53be58d2de2f0fd6f30799725ab, accb3280ed01c6ccbaa7fc16dae85ed8'\n",
-      " '6a6d779cee75016e0d4f6801652f2606' 'fcfb01b736d36d8c624bdb8865f94f18'\n",
-      " '2ba0f46794d9b4774bded411d19cfd35' '4646c2f8d96f822aca8ed6322d4f4876'\n",
-      " '075ebc0674086dcdfc1c15d958b722f7' 'e5e418575bbf84d2c8d331724d138cf4'\n",
-      " '96c2aef4c7a1fc7d7013c82d571e795d' 'b9a01907bec86f7bfd8f256f0c24523d'\n",
-      " '8f15f8ae2c7fd92404f0a2269a4f07aa' '7dc88ab7106f1f9eaa67d82dcb2eef9f'\n",
-      " '045ffccdff45b9eb2eeb1eb3e011902f' 'b1443e1948002dc8a963042ede03d324'\n",
-      " '902b850a1187af265660b23d2bcbe6a6'\n",
-      " '1ddc66fd7d7a37dbe779c970e6e2cb3a, 745fb7229d1395c231177495b777fd2e'\n",
-      " '758dc6ed93d2f108e4cc7b4047167bc1' 'beceeebe049f07755089dc76698381f8'\n",
-      " 'e9cb442d60c212eee2fa7af5eb60627f, 08c1520fa3e5b379e28d39e6f68f3bb2'\n",
-      " '1613cad850cea485ff668a0c835334fd'\n",
-      " '0ff396a3db6ad6cb270c4c9ac82ef645, 692b4089877aa66df738537f599688e2'\n",
-      " '4fc44fc4ce8a21345013c34deb846013' 'b4c15da8ea8cb7e59fda56611b61a033'\n",
-      " '905670eab9d4b5c9fd6efda32ac52d4b'\n",
-      " '337b731a6accaee017520ace197a1f3f, d20a01ed5f73209324490b01cbf0db50'\n",
-      " 'a8636b39e1d9e93fd6051f4d00e3e02a' 'f6f344889c2eb9729bf5bae758a00573'\n",
-      " '09abb0d6c5bdd2647c39648ee62b1418, 8233d277c9e4bcc09f022a545de79a4c, 4f4fac98ada9f4c6a9270e5a34655de8'\n",
-      " '6146dc90aef3a5c236c93ced01266666, accb3280ed01c6ccbaa7fc16dae85ed8, d11c6aa5179c36432057bb2c395f7ac5, 09abb0d6c5bdd2647c39648ee62b1418'\n",
-      " '1bbb53e881143882d4c034ff7b541382' 'caa9ecfc2e212968573d438e95daa4f6'\n",
-      " '692b4089877aa66df738537f599688e2'\n",
-      " '6146dc90aef3a5c236c93ced01266666, b1443e1948002dc8a963042ede03d324'\n",
-      " '1e011dbf901be4c1188dcddfbdbf8999' 'e143e1b5264685216a54e33cee6bd765'\n",
-      " '7d2394ffefeb91b209020cb735a24ce3, 09abb0d6c5bdd2647c39648ee62b1418'\n",
-      " 'b80174e8e16e9740247a3c66926f4416'\n",
-      " '1b5b35003cb4d24e1267a4e9cef25689, 295c9657bd9debf5ca7384f367b9bcb3, 2ab69d7a42f95202c984161db9199d71'\n",
-      " '44d966a12475ea5eb69433c08f3d99e0, 9171a59c2fab87fa3f28f839fb1db372']\n"
+      "FarmerIndicationNumberHash\n",
+      "2dacba93d45b0f46a25b29b985bd90e2                                      19\n",
+      "10aad9b486abee43973bb555cc3362c2                                      19\n",
+      "7db8af145bda49552f855ba395906a2f                                      17\n",
+      "2ab69d7a42f95202c984161db9199d71                                      14\n",
+      "8804b26aea1e028b08b9554aa81b504e                                      11\n",
+      "                                                                      ..\n",
+      "d0f55500fceace07aec6fdbc2fd1caa2                                       1\n",
+      "e0d984e190b32e713bf529c3cfd80cd7                                       1\n",
+      "fb65e4d1efc593fc06a419399a6cab2d                                       1\n",
+      "48a752bb590dd689ae27cf44a90c9918, 47165df7307c7636bbaf4880e7cb2a6f     1\n",
+      "44d966a12475ea5eb69433c08f3d99e0, 9171a59c2fab87fa3f28f839fb1db372     1\n",
+      "Name: count, Length: 116, dtype: int64\n"
      ]
     }
    ],
    "source": [
     "# FarmerIndicationNumberHashのユニークな値を取得\n",
     "farmerid_list = gdf['FarmerIndicationNumberHash'].unique()\n",
-    "print(farmerid_list)"
+    "# print(farmerid_list)\n",
+    "# それぞれの人が持っている農地の数を取得\n",
+    "farmerid_count = gdf['FarmerIndicationNumberHash'].value_counts()\n",
+    "print(farmerid_count)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 162,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "3\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 3881.7989955903804\n",
-      "3881.7989955903804\n",
-      "7\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 10279.290303669048\n",
-      "10279.290303669048\n",
-      "6\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 12117.51406655079\n",
-      "12117.51406655079\n",
-      "7\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 13175.110514021113\n",
-      "13175.110514021113\n",
-      "7\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 13175.110514021113\n",
-      "13175.110514021113\n",
-      "6\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 8068.645253907449\n",
-      "13175.110514021113\n",
-      "6\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 10720.72116754156\n",
-      "13175.110514021113\n",
-      "7\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 10279.290303669048\n",
-      "13175.110514021113\n",
-      "7\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 11906.14549072555\n",
-      "13175.110514021113\n",
-      "8\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 11856.747891773195\n",
-      "13175.110514021113\n",
-      "8\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 11856.747891773195\n",
-      "13175.110514021113\n",
-      "7\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 10279.290303669048\n",
-      "13175.110514021113\n",
-      "3\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 3919.9081482087236\n",
-      "13175.110514021113\n",
-      "5\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 6909.857865196391\n",
-      "13175.110514021113\n",
-      "4\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 4699.212815434793\n",
-      "13175.110514021113\n",
-      "1\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 937.9155201592782\n",
-      "13175.110514021113\n",
-      "6\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 11597.652925916966\n",
-      "13175.110514021113\n",
-      "6\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 11597.652925916966\n",
-      "13175.110514021113\n",
-      "5\n",
-      "Farmer ID: 2dacba93d45b0f46a25b29b985bd90e2 Total Area: 7895.650063954556\n",
-      "13175.110514021113\n"
+      "(140.375353413567, 36.374879510486224)\n",
+      "(140.3754835333555, 36.37461504064325)\n",
+      "(140.37668934851857, 36.37346638402421)\n"
      ]
     }
    ],
    "source": [
-    "farmer1 = Farmer(\"2dacba93d45b0f46a25b29b985bd90e2\")\n"
+    "# 農地を一番持っている人のIDを取得\n",
+    "farmer1 = Farmer(\"2dacba93d45b0f46a25b29b985bd90e2\")\n",
+    "farmer2 = Farmer(\"10aad9b486abee43973bb555cc3362c2\")\n",
+    "farmer3 = Farmer(\"7db8af145bda49552f855ba395906a2f\")\n",
+    "\n",
+    "print(farmer1.basepoint1)\n",
+    "print(farmer2.basepoint1)\n",
+    "print(farmer3.basepoint1)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(140.375353413567, 36.374879510486224)"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "farmer1.basepoint1"
    ]
   },
   {
